tests/base/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-cid-with.scillib
scilla_version 0

library TestLib

type House =
| Kind String
